--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@ summaryLength: 20
 
 params:
   title: "Up Business"
-  description: "We specialize in providing services to desing websites, applications, build and maintain business for customers."
+  description: "FUZ.Zone blah"
   images: 
     - "images/hero-image.png"
 
